--- a/VimeoDownload.Wrapper.Core/VimeoDownload.Wrapper.Core.csproj
+++ b/VimeoDownload.Wrapper.Core/VimeoDownload.Wrapper.Core.csproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Authors>Cookie Studio</Authors>
+    <Copyright>Copyright (C) 2019 Cookie Studio. All rights reserved.</Copyright>
+    <Description></Description>
+    <AssemblyName>VimeoDownloader</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
