--- a/.gitignore
+++ b/.gitignore
@@ -338,5 +338,4 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-/VimeoDownload.Wrapper.Core/Properties/launchSettings.json
-/VimeoDownload.Wrapper.Windows/Properties/launchSettings.json
+launchSettings.json
